Uma versão simples com apenas 7 peças está totalmente funcional no client. Agora tem que refatorar o código que está feio e extende-lo.

--- a/public/template.html
+++ b/public/template.html
@@ -31,13 +31,13 @@
 			
 			<table id="game">
 				<tr>
-					<td><div class="peca" /></td>
-					<td><div class="peca" /></td>
-					<td><div class="peca" /></td>
-					<td><div class="peca" /></td>
-					<td><div class="peca" /></td>
-					<td><div class="peca" /></td>
-					<td><div class="peca" /></td>
+					<td data-spot="01"><div class="peca" /></td>
+					<td data-spot="02"><div class="peca" /></td>
+					<td data-spot="03"><div class="peca" /></td>
+					<td data-spot="04"></td>
+					<td data-spot="05"><div class="peca" /></td>
+					<td data-spot="06"><div class="peca" /></td>
+					<td data-spot="07"><div class="peca" /></td>
 				</tr>
 			</table>
 		
