Refactor no JS. Adicionei um esquema de testes com Jasmine.

--- a/public/template.html
+++ b/public/template.html
@@ -4,9 +4,10 @@
 	<meta charset="utf-8" />
 	<title>Resta 1 - Algoritmo Genético</title>
 	<link rel="stylesheet" href="css/styles.css" type="text/css" media="screen" />
-	<script type="text/javascript" src="js/jquery-1.4.4.min.js"></script>
-	<script type="text/javascript" src="js/jquery-ui-1.8.10.custom.min.js"></script>
-	<script type="text/javascript" src="js/application.js"></script>
+	<script type="text/javascript" src="js/lib/jquery/jquery-1.4.4.min.js"></script>
+	<script type="text/javascript" src="js/lib/jquery/jquery-ui-1.8.10.custom.min.js"></script>
+	<script type="text/javascript" src="js/src/Resta1.js"></script>
+	<script type="text/javascript" src="js/src/Application.js"></script>
 </head>
 <body>
 <div id="wrapper"><!-- #wrapper -->
