Tabuleiro montado e jogo 100% OK.

--- a/public/template.html
+++ b/public/template.html
@@ -30,15 +30,69 @@
 	<section id="main">
 		<section id="content">
 			
-			<table id="game">
+			<table id="tabuleiro">
 				<tr>
+					<td class="shore"></td>
+					<td class="shore"></td>
 					<td data-spot="01"><div class="peca" /></td>
 					<td data-spot="02"><div class="peca" /></td>
 					<td data-spot="03"><div class="peca" /></td>
-					<td data-spot="04"></td>
+					<td class="shore"></td>
+					<td class="shore"></td>
+				</tr>
+				<tr>
+					<td class="shore"></td>
+					<td class="shore"></td>
+					<td data-spot="04"><div class="peca" /></td>
 					<td data-spot="05"><div class="peca" /></td>
 					<td data-spot="06"><div class="peca" /></td>
+					<td class="shore"></td>
+					<td class="shore"></td>
+				</tr>
+				<tr>
 					<td data-spot="07"><div class="peca" /></td>
+					<td data-spot="08"><div class="peca" /></td>
+					<td data-spot="09"><div class="peca" /></td>
+					<td data-spot="10"><div class="peca" /></td>
+					<td data-spot="11"><div class="peca" /></td>
+					<td data-spot="12"><div class="peca" /></td>
+					<td data-spot="13"><div class="peca" /></td>
+				</tr>
+				<tr>
+					<td data-spot="14"><div class="peca" /></td>
+					<td data-spot="15"><div class="peca" /></td>
+					<td data-spot="16"><div class="peca" /></td>
+					<td data-spot="17"></td>
+					<td data-spot="18"><div class="peca" /></td>
+					<td data-spot="19"><div class="peca" /></td>
+					<td data-spot="20"><div class="peca" /></td>
+				</tr>
+				<tr>
+					<td data-spot="21"><div class="peca" /></td>
+					<td data-spot="22"><div class="peca" /></td>
+					<td data-spot="23"><div class="peca" /></td>
+					<td data-spot="24"><div class="peca" /></td>
+					<td data-spot="25"><div class="peca" /></td>
+					<td data-spot="26"><div class="peca" /></td>
+					<td data-spot="27"><div class="peca" /></td>
+				</tr>
+				<tr>
+					<td class="shore"></td>
+					<td class="shore"></td>
+					<td data-spot="28"><div class="peca" /></td>
+					<td data-spot="29"><div class="peca" /></td>
+					<td data-spot="30"><div class="peca" /></td>
+					<td class="shore"></td>
+					<td class="shore"></td>
+				</tr>
+				<tr>
+					<td class="shore"></td>
+					<td class="shore"></td>
+					<td data-spot="31"><div class="peca" /></td>
+					<td data-spot="32"><div class="peca" /></td>
+					<td data-spot="33"><div class="peca" /></td>
+					<td class="shore"></td>
+					<td class="shore"></td>
 				</tr>
 			</table>
 		
