--- a/javascript/SpecRunner.html
+++ b/javascript/SpecRunner.html
@@ -2,6 +2,7 @@
   "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
+	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
 	<title>Jasmine Test Runner</title>
 	<link rel="stylesheet" type="text/css" href="lib/jasmine-1.0.2/jasmine.css">
 	<script type="text/javascript" src="lib/jquery/jquery-1.4.4.min.js"></script>
