--- a/javascript/SpecRunner.html
+++ b/javascript/SpecRunner.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="lib/jasmine-1.0.2/jasmine.css">
 	<script type="text/javascript" src="lib/jquery/jquery-1.4.4.min.js"></script>
 	<script type="text/javascript" src="lib/jquery/jquery-ui-1.8.10.custom.min.js"></script>
+	<script type="text/javascript" src="lib/jquery/jquery.jgrowl_minimized.js"></script>
 	<script type="text/javascript" src="lib/jasmine-1.0.2/jasmine.js"></script>
 	<script type="text/javascript" src="lib/jasmine-1.0.2/jasmine-html.js"></script>
 
@@ -14,12 +15,12 @@
 	<script type="text/javascript" src="src/Player.js"></script>
 	<script type="text/javascript" src="src/Song.js"></script>
 	<script type="text/javascript" src="src/Resta1.js"></script>
+	<script type="text/javascript" src="src/Utils.js"></script>
 
   <!-- include spec files here... -->
 	<script type="text/javascript" src="spec/SpecHelper.js"></script>
 	<script type="text/javascript" src="spec/PlayerSpec.js"></script>
 	<script type="text/javascript" src="spec/Resta1Spec.js"></script>
-
 </head>
 <body>
 
