--- a/javascript/SpecRunner.html
+++ b/javascript/SpecRunner.html
@@ -12,15 +12,14 @@
 	<script type="text/javascript" src="lib/jasmine-1.0.2/jasmine-html.js"></script>
 
   <!-- include source files here... -->
-	<script type="text/javascript" src="src/Player.js"></script>
-	<script type="text/javascript" src="src/Song.js"></script>
 	<script type="text/javascript" src="src/Resta1.js"></script>
+	<script type="text/javascript" src="src/AG.js"></script>
 	<script type="text/javascript" src="src/Utils.js"></script>
 
   <!-- include spec files here... -->
 	<script type="text/javascript" src="spec/SpecHelper.js"></script>
-	<script type="text/javascript" src="spec/PlayerSpec.js"></script>
 	<script type="text/javascript" src="spec/Resta1Spec.js"></script>
+	<script type="text/javascript" src="spec/AGSpec.js"></script>
 </head>
 <body>
 
