--- a/public/resta1.html
+++ b/public/resta1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <style>
-	 
+     
 	svg {
 	  float: left;
 	  border: solid 1px #aaa;
@@ -9,7 +9,7 @@
 	
 	circle {
 		stroke : grey;
-		stroke-width : 2;
+		stroke-width : 3;
 		fill: brown;
 	}
 	
@@ -18,9 +18,13 @@
 	}
 	
 	circle.empty {
-		fill: none;
+		fill: white;
 	}
 	
+	circle.destination {
+		fill: white;
+		stroke : green;
+	}
 	
 </style>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
@@ -36,6 +40,7 @@ var width = $('body').width(),
 	dsloth = Math.floor(sloth/2),
 	radius = Math.floor(0.35 * Math.min(slotw, sloth));
 
+var validMoves = [[0,1,2],[0,3,8],[1,4,9],[2,1,0],[2,5,10],[3,4,5],[3,8,15],[4,9,16],[5,4,3],[5,10,17],[6,7,8],[6,13,20],[7,8,9],[7,14,21],[8,3,0],[8,7,6],[8,9,10],[8,15,22],[9,4,1],[9,8,7],[9,10,11],[9,16,23],[10,5,2],[10,9,8],[10,11,12],[10,17,24],[11,10,9],[11,18,25],[12,11,10],[12,19,26],[13,14,15],[14,15,16],[15,8,3],[15,14,13],[15,16,17],[15,22,27],[16,9,4],[16,15,14],[16,17,18],[16,23,28],[17,10,5],[17,16,15],[17,18,19],[17,24,29],[18,17,16],[19,18,17],[20,13,6],[20,21,22],[21,14,7],[21,22,23],[22,15,8],[22,21,20],[22,23,24],[22,27,30],[23,16,9],[23,22,21],[23,24,25],[23,28,31],[24,17,10],[24,23,22],[24,25,26],[24,29,32],[25,18,11],[25,24,23],[26,19,12],[26,25,24],[27,22,15],[27,28,29],[28,23,16],[29,24,17],[29,28,27],[30,27,22],[30,31,32],[31,28,23],[32,29,24],[32,31,30]];
 
 var board = [
 	{x: 2*slotw, y:0}, {x:3*slotw, y:0}, {x:4*slotw, y:0},
@@ -47,10 +52,55 @@ var board = [
 	{x: 2*slotw, y:6*sloth}, {x:3*slotw, y:6*sloth}, {x:4*slotw, y:6*sloth}
 ]
 
-board.forEach(function(elem, i){ elem.x += dslotw, elem.y += dsloth, elem.empty = i==16});
+board.forEach(function(spot, i){ 
+	//Adiciona o deslocamento para centralizar o círculo
+	spot.x += dslotw, spot.y += dsloth,
+	
+	//Determina que o slot 16 está vazio incialmente 
+	spot.state = i==16 ? 'empty' : '';
+	
+	//Movimentos válidos deste slot
+	spot.validMoves = validMoves.filter(function(m) { return i==m[0] });
+	
+	//Função que determina se o movimento pode ser executado no estado atual
+	spot.validMovesNow = function(){ return spot.validMoves.filter(function(m){ return !board[m[0]].empty() && !board[m[1]].empty() && board[m[2]].empty() }) };
+	
+	spot.empty = function(){return spot.state == 'empty' || spot.state == 'destination';}
+	
+	spot.destination = function(){return spot.state == 'destination';}
+	
+	spot.selected = function(){return spot.state == 'selected';}
+	
+	spot.cleanState = function() { 
+		switch(spot.state) {
+			case 'selected': 	spot.state = ''; 	  break;
+			case 'destination': spot.state = 'empty'; break;
+		} 
+	}
+	
+	spot.runMove = function() { /*spot é o destinatário*/
+		spot.state = '';
+		board[spot.refMove[1]].state = 'empty';
+		board[spot.refMove[0]].state = 'empty';
+	}
+});
 
-console.log(board);
- 
+
+board.cleanState = function() {
+	board.forEach(function(spot) { spot.cleanState() });
+}
+
+board.selectedSpot = function() {
+	return board.filter(function(spot) { return spot.selected() })[0];
+}
+
+board.selectSpot = function(spot) {
+	spot.state = 'selected';
+	spot.validMovesNow().forEach(function(m) {
+		board[m[2]].state = 'destination';
+		board[m[2]].refMove = m;
+	});
+}
  
 var svg = d3.select("body").append("svg")
 		  .attr("width", width)
@@ -59,26 +109,32 @@ var svg = d3.select("body").append("svg")
 var slotCircles = svg.selectAll("svg")
 	.data(board).enter()
 	.append("circle")
-	.attr("class", function(d) { return d.empty ? 'empty' : ''; })
+	.attr("class", function(spot) { return spot.state; })
 	.attr("r", radius)
-	.attr("cx", function(d) { return d.x; })
-	.attr("cy", function(d) { return d.y; })
-	.on('click', function(d){ 
-		d3.select(this).attr('class', 'selected');
-		//se for pino e estiver selecionado, deseleciona
-		//senao, seleciona
-		
-		//se nao for pino, é destino
-		
-		// 
+	.attr("cx", function(spot) { return spot.x; })
+	.attr("cy", function(spot) { return spot.y; })
+	.on('click', function(spot){ 
+		if (spot.destination()) {
+			//execuar ação de comer
+			spot.runMove();
+			updateView();
+		}
+		else if (spot.empty()) {
+			//não faz nada
+		}
+		else {
+			//limpa estado e seleciona
+			board.cleanState();
+			board.selectSpot(spot);
+			updateView();
+		}
 	});
 
- 
-function dragmove(d) {
-	console.log(d, this, d3.event)
-  d3.select(this)
-	  .attr("cx", d.x = Math.max(radius, Math.min(width - radius, d3.event.x)))
-	  .attr("cy", d.y = Math.max(radius, Math.min(height - radius, d3.event.y)));
-}
- 
+
+function updateView() {
+	var slotCircles = svg.selectAll("circle")
+	.data(board)
+	.attr("class", function(d) { return d.state; });
+} 
+  
 </script>
