--- a/public/ag.html
+++ b/public/ag.html
@@ -2,15 +2,15 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<title>Resta 1</title>
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+				<title>Resta 1</title>
+				<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
         <script src="js/lib/underscore.js"></script>
-		<script src="http://mbostock.github.com/d3/d3.js?2.7.1"></script>
+				<script src="http://mbostock.github.com/d3/d3.js?2.7.1"></script>
         <script src="js/src/Utils.js"></script>
         <script src="js/src/Resta1.js"></script>
         <script src="js/src/AG.js"></script>
+				<script src="js/src/Busca.js"></script>
         <script src="js/src/FastTests.js"></script>
-        <!--script src="js/src/FastTests.js"></script-->
         <link rel="stylesheet" type="text/css" media="screen" href="css/styles.css" />
         <style>svg { margin: 2px; }</style>
 	</head>
