ajuste no import da lib d3 e do favicon

--- a/busca.html
+++ b/busca.html
@@ -3,14 +3,15 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<title>Resta 1</title>
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+		<script src="js/lib/jquery/jquery-1.4.4.min.js"></script>
         <script src="js/lib/underscore.js"></script>
-		<script src="http://mbostock.github.com/d3/d3.js?2.7.1"></script>
+		<script src="js/lib/d3.js"></script>
         <script src="js/src/Utils.js"></script>
         <script src="js/src/Resta1.js"></script>
         <script src="js/src/AG.js"></script>
 		<script src="js/src/Busca.js"></script>
         <link rel="stylesheet" type="text/css" media="screen" href="css/styles.css" />
+        <link rel="shortcut icon" href="favicon.ico" />
         <style>svg { margin: 2px; }</style>
 	</head>
 	 
