--- a/ag.html
+++ b/ag.html
@@ -3,9 +3,9 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 				<title>Resta 1</title>
-				<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+				<script src="js/lib/jquery/jquery-1.4.4.min.js"></script>
         <script src="js/lib/underscore.js"></script>
-				<script src="http://mbostock.github.com/d3/d3.js?2.7.1"></script>
+				<script src="js/lib/d3.js"></script>
         <script src="js/src/Utils.js"></script>
         <script src="js/src/Resta1.js"></script>
         <script src="js/src/AG.js"></script>
