--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <script src="js/src/Utils.js"></script>
         <script src="js/src/Resta1.js"></script>
         <link rel="stylesheet" type="text/css" media="screen" href="css/styles.css" />
+        <link rel="shortcut icon" href="favicon.ico" />
 	</head>
 	 
 	<body>
