--- a/testes.html
+++ b/testes.html
@@ -3,7 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<title>Resta 1 - Testes</title>
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+		<script src="js/lib/jquery/jquery-1.4.4.min.js"></script>
         <script src="js/lib/underscore.js"></script>
         <script src="js/src/Utils.js"></script>
         <script src="js/src/Resta1.js"></script>
