PegSolitaire.ts is a working module. First attempt to make a WebWorker with modules failed (WIP).

--- a/static/ag.html
+++ b/static/ag.html
@@ -7,7 +7,7 @@
         <script src="js/lib/underscore.js"></script>
 				<script src="js/lib/d3.js"></script>
         <script src="js/src/Utils.js"></script>
-        <script src="js/src/Resta1.js"></script>
+        <script src="js/tsbuild/PegSolitaire.js"></script>
         <script src="js/src/AG.js"></script>
 				<script src="js/src/Busca.js"></script>
         <script src="js/src/FastTests.js"></script>
