--- a/static/template.html
+++ b/static/template.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="css/styles.css" type="text/css" media="screen" />
 	<script type="text/javascript" src="js/lib/jquery/jquery-1.4.4.min.js"></script>
 	<script type="text/javascript" src="js/lib/jquery/jquery-ui-1.8.10.custom.min.js"></script>
-	<script type="text/javascript" src="js/src/Resta1.js"></script>
+	<script type="text/javascript" src="js/tsbuild/PegSolitaire.js"></script>
 	<script type="text/javascript" src="js/src/Application.js"></script>
 </head>
 <body>
