--- a/static/index.html
+++ b/static/index.html
@@ -1,36 +1,37 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<title>Resta 1</title>
-		<script src="js/lib/jquery/jquery-1.4.4.min.js"></script>
-		<script src="js/lib/d3.js"></script>
-        <script src="js/src/Utils.js"></script>
-        <script src="js/src/Resta1.js"></script>
-        <link rel="stylesheet" type="text/css" media="screen" href="css/styles.css" />
-        <link rel="shortcut icon" href="favicon.ico" />
-	</head>
-	 
-	<body>
-	
-	<script>
-    var board;
-	
-    $(document).ready(function(){
-        board = new PegSolitaire.Board({width: $('body').width(), height: $(window).height()-20});
+    <title>Resta 1</title>
+    <script src="js/lib/jquery/jquery-1.4.4.min.js"></script>
+    <script src="js/lib/d3.js"></script>
+    <script src="js/src/Utils.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="css/styles.css" />
+    <link rel="shortcut icon" href="favicon.ico" />
+</head>
 
-				if (getUrlVars('sequence'))
-					board.runSequenceAnimated(getUrlVars('sequence'));
-        
-        //crtl+z bind
-        $(window).keypress( function(eventObject) { 
-            if (eventObject.ctrlKey && eventObject.keyCode == 26) {
-                board.undoLastMove();
-            }
-        } );
-    });
+<body>
 
-	</script>
+    <script type="module">
+        import Board from './js/tsbuild/PegSolitaire.js';
+        window.board;
 
-	</body>
+        $(document).ready(function () {
+            window.board = new Board({ width: $('body').width(), height: $(window).height() - 20 });
+
+            if (getUrlVars('sequence'))
+            window.board.runSequenceAnimated(getUrlVars('sequence'));
+
+            //crtl+z bind
+            $(window).keypress(function (eventObject) {
+                if (eventObject.ctrlKey && eventObject.keyCode == 26) {
+                    window.board.undoLastMove();
+                }
+            });
+        });
+    </script>
+
+</body>
+
 </html>
