--- a/static/js/SpecRunner.html
+++ b/static/js/SpecRunner.html
@@ -12,7 +12,7 @@
 	<script type="text/javascript" src="lib/jasmine-1.0.2/jasmine-html.js"></script>
 
   <!-- include source files here... -->
-	<script type="text/javascript" src="src/Resta1.js"></script>
+	<script type="text/javascript" src="tsbuild/PegSolitaire.js"></script>
 	<script type="text/javascript" src="src/AG.js"></script>
 	<script type="text/javascript" src="src/Utils.js"></script>
 
