--- a/static/testes.html
+++ b/static/testes.html
@@ -6,7 +6,7 @@
 		<script src="js/lib/jquery/jquery-1.4.4.min.js"></script>
         <script src="js/lib/underscore.js"></script>
         <script src="js/src/Utils.js"></script>
-        <script src="js/src/Resta1.js"></script>
+        <script src="js/tsbuild/PegSolitaire.js"></script>
         <script src="js/src/AG.js"></script>
         <script src="js/src/Busca.js"></script>
         <script src="js/src/FastTests.js"></script>
